# token-migration-node

pallets/bridge/: Cargo.toml
pallets/bridge/src/: lib.rs
pallets/bridge_transfer/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
